[package]
name = "reader"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
simple-logging = "2.0.2"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.41.0", features = ["macros", "process", "rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["full", "futures-io", "io"] }
